--- a/.firebaserc
+++ b/.firebaserc
@@ -1,15 +1,15 @@
 {
   "projects": {
-    "default": "guess-the-song-d74b8"
+    "default": "wotsong-app"
   },
   "targets": {
-    "guess-the-song-d74b8": {
+    "wotsong-app": {
       "hosting": {
-        "test-guess-the-song": [
-          "test-guess-the-song"
+        "test-wotsong-app": [
+          "test-wotsong-app"
         ],
-        "guess-the-song": [
-          "guess-the-song"
+        "wotsong-app": [
+          "wotsong-app"
         ]
       }
     }
