--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "bratus": "node ./node_modules/@react-bratus/cli/bin",
+    "bratus:start": "node ./node_modules/@react-bratus/cli/bin -s",
+    "bratus:parse": "node ./node_modules/@react-bratus/cli/bin -p"
   },
   "eslintConfig": {
     "extends": [
@@ -76,6 +79,7 @@
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
-    "webpack": "^5.69.1"
+    "webpack": "^5.69.1",
+    "@react-bratus/cli": "^3.0.2"
   }
 }
