--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.1.1"
   },
   "scripts": {
     "start": "craco start",
